# xterminal

./: README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.codegraph/: daemon.pid
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  connection.rs  ftp.rs  local_fs.rs  local_shell.rs  mod.rs  port_forward.rs  sftp.rs  ssh.rs
src-tauri/src/models/: config.rs  connection.rs  mod.rs  transfer.rs
src-tauri/src/security/: crypto.rs  keyring.rs  mod.rs
src-tauri/src/services/: ftp_service.rs  local_shell.rs  mod.rs  port_forward.rs  sftp_service.rs  ssh_service.rs  transfer_queue.rs
src-tauri/src/store/: database.rs  migrations.rs
src/components/: ConnectionDialog.tsx  FileBrowser.css  FileBrowser.tsx  FileExplorer.tsx  HostKeyDialog.tsx  Sidebar.tsx  TabBar.tsx  TabContextMenu.tsx  TerminalPanel.tsx  TransferPanel.tsx  WelcomeScreen.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx
src/stores/: appStore.ts  connectionStore.ts  fileExplorerStore.ts  localFileStore.ts  terminalStore.ts  transferStore.ts
src/types/: config.ts  connection.ts  index.ts  transfer.ts
